cmake_minimum_required(VERSION 3.10)
project(thread_pool)

set(CMAKE_CXX_COMPILER "g++")
add_compile_options(-std=c++11 -gdwarf-4)

aux_source_directory(src SRC)
add_library(thread_pool SHARED ${SRC})
target_link_libraries(thread_pool pthread)
target_include_directories(thread_pool PUBLIC include)

add_executable(test01 ./example/test01.cpp)
target_link_libraries(test01 thread_pool)
add_executable(test02 ./example/test02.cpp)
target_link_libraries(test02 thread_pool)
add_executable(test03 ./example/test03.cpp)
target_link_libraries(test03 thread_pool)
add_executable(test04 ./example/test04.cpp)
target_link_libraries(test04 thread_pool)
add_executable(test05 ./example/test05.cpp)
target_link_libraries(test05 thread_pool)
add_executable(test06 ./example/test06.cpp)
target_link_libraries(test06 thread_pool)
target_include_directories(test06 PUBLIC include)
add_executable(test07 ./example/test07.cpp)
target_link_libraries(test07 thread_pool)
target_include_directories(test07 PUBLIC include)
add_executable(test08 ./example/test08.cpp)
target_link_libraries(test08 thread_pool)
target_include_directories(test08 PUBLIC include)
add_executable(test09 ./example/test09.cpp)
target_link_libraries(test09 thread_pool)
target_include_directories(test09 PUBLIC include)
add_executable(test10 ./example/test10.cpp)
target_link_libraries(test10 thread_pool)
target_include_directories(test10 PUBLIC include)
add_executable(test11 ./example/test11.cpp)
target_link_libraries(test11 thread_pool)
target_include_directories(test11 PUBLIC include)

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
